--- a/packages/components/button/src/styles/index.module.scss
+++ b/packages/components/button/src/styles/index.module.scss
@@ -14,14 +14,15 @@
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
-  background-color: scss-utils.get-css-var(button, background-color);
-  color: scss-utils.get-css-var(button, text-color);
   padding: scss-utils.get-css-var(button, padding-y) scss-utils.get-css-var(button, padding-x);
-  border-style: solid;
   border-width: 1px;
+  border-style: solid;
   border-color: scss-utils.get-css-var(button, border-color);
   border-radius: scss-utils.get-css-var(button, border-radius);
+  background-color: scss-utils.get-css-var(button, background-color);
+  color: scss-utils.get-css-var(button, text-color);
   cursor: pointer;
+  text-align: center;
   transition: all 0.2s ease;
 
   &:disabled {
@@ -46,13 +47,13 @@
   align-items: center;
 
   &_before {
-    margin-left: theme.get-spacing(-1);
     margin-right: theme.get-spacing(1);
+    margin-left: theme.get-spacing(-1);
   }
 
   &_after {
-    margin-left: theme.get-spacing(1);
     margin-right: theme.get-spacing(-1);
+    margin-left: theme.get-spacing(1);
   }
 }
 
@@ -120,7 +121,7 @@
           @include scss-utils.define-css-var(button, border-color, $bc);
         }
 
-        @if ($tc) {
+        @if $tc {
           @include scss-utils.define-css-var(button, text-color, $tc);
         }
 
