--- a/packages/components/form-field/src/styles/_variables.scss
+++ b/packages/components/form-field/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 @use "@react-ck/scss-utils";
 
 $form-field-border-width: scss-utils.get-css-var(spacing, border);
+$form-field-input-height: theme.get-spacing(4);
 $form-field-styles: (
   default: (
     background-color: theme.get-color(neutral-light-1),
