--- a/packages/components/select/src/styles/index.module.scss
+++ b/packages/components/select/src/styles/index.module.scss
@@ -31,10 +31,6 @@
   white-space: nowrap;
 }
 
-.multiple {
-  @include form-field.form-field-input-flexible;
-}
-
 .menu {
   > :first-child {
     border-top-left-radius: theme.get-spacing(1);
